--- a/src/style.css
+++ b/src/style.css
@@ -298,9 +298,5 @@ body {
 }
 
 .uname-password {
-    background-color: chartreuse;
-}
-
-.container {
-    background: chartreuse;
+    color: chartreuse;
 }
