--- a/src/style.css
+++ b/src/style.css
@@ -302,4 +302,130 @@ body {
     padding-left: 0.5rem;
 }
 
-.uname-password {}
+.login-button {
+    color: whitesmoke;
+    width: 33%;
+    padding: .5em 1em;
+    border-radius: .5em;
+    border: 1px solid;
+    margin-bottom: 1em;
+    transition: 600ms;
+    border-color: transparent;
+    outline: none;
+    background-color: var(--third-bg-color);
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.login-button:hover {
+    background-color: azure;
+    color: black;
+}
+
+.uname-password {
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.login-image {
+    margin-left: 7%;
+}
+
+.login-input {
+    color: whitesmoke;
+    width: 70%;
+    padding: .5em 1em;
+    border-radius: .5em;
+    border: 1px solid;
+    margin-bottom: 1em;
+    transition: 600ms;
+    border-color: transparent;
+    outline: none;
+    background-color: var(--third-bg-color);
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+
+/* The switch - the box around the slider */
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+
+/* Hide default HTML checkbox */
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+
+/* The slider */
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #2196F3;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+
+/* Rounded sliders */
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.login-slider {
+    position: absolute;
+    top: 20px;
+    right: 70%;
+}
+
+.remember-me {
+    margin-bottom: 6em;
+}
