--- a/src/style.css
+++ b/src/style.css
@@ -429,3 +429,20 @@ input:checked+.slider:before {
 .remember-me {
     margin-bottom: 6em;
 }
+
+.flag{
+
+    position: absolute;
+    top: 20%;
+    right: 60%;
+}
+
+.transition-fade {
+    transition: 0.4s;
+    opacity: 1;
+  }
+  
+  html.is-animating .transition-fade {
+    opacity: 0;
+  }
+  
